fixed horrizontal scroll directive to work on firefox

--- a/client/web-app/styles/custom.css
+++ b/client/web-app/styles/custom.css
@@ -2,7 +2,7 @@
 /* typography */
 /* views */
 #headerBrand .navbar-right {
-  width: 445px;
+  width: 450px;
   height: 100%; }
   #headerBrand .navbar-right li {
     padding-left: 0px;
