--- a/client/web-app/styles/sass/sass-style/views/index.scss
+++ b/client/web-app/styles/sass/sass-style/views/index.scss
@@ -1,6 +1,6 @@
 #headerBrand {
     .navbar-right {
-        width: 445px;
+        width: 450px;
         height: 100%;
         li {
             padding-left: 0px;
